# globiguard-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  publish.yml  security.yml  test.yml
examples/: server_client.py  verify_webhook.py
src/globiguard/: __init__.py  ai_intercept.py  bootstrap.py  brain.py  client.py  credentials.py  entitlements.py  errors.py  governed_actions.py  observability.py  resources.py  server.py  transport.py
tests/: test_sdk.py
