[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "globiguard"
version = "0.1.0"
description = "Official dependency-minimal Python SDK for GlobiGuard."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "GlobiGuard" }]
keywords = ["ai-governance", "compliance", "audit", "approval", "webhooks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://globiguard.com"
Repository = "https://github.com/globiguard/globiguard-python"
Issues = "https://github.com/globiguard/globiguard-python/issues"

[tool.setuptools.package-data]
globiguard = ["py.typed"]
